--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./src/app.js localhost 3001",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./src/app.js --exec babel-node -e js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +13,10 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "express": "^4.17.3",
+    "morgan": "^1.10.0"
   }
 }
