--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
+    "mongoose": "^6.2.6",
     "morgan": "^1.10.0"
   }
 }
